# warframe-market-telegram

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-05-warframe-market-telegram-forwarder.md
docs/superpowers/specs/: 2026-07-05-warframe-market-telegram-forwarder-design.md
src/market_message/: __init__.py  __main__.py  config.py  forwarder.py  models.py  state.py  telegram.py  warframe.py
tests/: test_config.py  test_formatting.py  test_forwarder.py  test_main.py  test_packaging.py  test_state.py  test_telegram.py  test_warframe_payload.py
