[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-message"
version = "0.1.0"
description = "Forward new incoming Warframe Market messages to Telegram"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "websocket-client>=1.8,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
market-message = "market_message.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
